làm them countdown và next câu hỏi!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="thi_thu_khoa">Chọn Khoa</string>
     <string name="thi_thu_nganh">Chọn Ngành</string>
     <string name="thi_thu_mon">Chọn Môn</string>
+    <string name="thi_do_kho">Chọn độ khó</string>
     <string name="dang_nhap">Đăng nhập</string>
     <string name="dang_nhap_quen_mk">Quên mật khẩu?</string>
 
