thêm giao diện xem đáp án.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="main_dang_xuat">Đăng xuất</string>
     <string name="main_dang_ki">Đăng Kí</string>
 
+    <string name="view_answer">Xem đáp án</string>
     <string name="submit">Submit</string>
 
     <string name="dki_mssv">Mã số sinh viên: </string>
